Dashboard Product Resource index method
