# routes/api.php
@@ -3,6 +3,7 @@
 use App\kolik\Domains\Controllers\Auth\Controller as AuthenticationController;
 use App\kolik\Domains\Controllers\Category\Controller as CategoryController;
 use App\kolik\Domains\Controllers\City\Controller as CityController;
+use App\kolik\Domains\Controllers\Dashboard\Product\Resource\Controller as DashboardProductResourceController;
 use App\kolik\Domains\Controllers\Feedback\Controller as FeedbackController;
 use App\kolik\Domains\Controllers\Generation\Controller as ModelGenerationController;
 use App\kolik\Domains\Controllers\Manufacturer\Controller as ManufacturerController;
@@ -94,4 +95,13 @@ Route::middleware('auth:sanctum')->group(function (): void {
 Route::prefix('feedbacks')->name('feedback-')->group(function (): void {
     Route::get('', [FeedbackController::class, 'index'])->name('index');
     Route::post('', [FeedbackController::class, 'create'])->name('create');
+});
+
+Route::prefix('dashboard/')->name('dashboard-')->group(function (): void {
+    Route::prefix('products/')->name('product-')->group(function (): void {
+
+        Route::prefix('resources/')->name('resource-')->group(function (): void {
+            Route::get('', [DashboardProductResourceController::class, 'index'])->name('index');
+        });
+    });
 });
